--- a/Accomodations.html
+++ b/Accomodations.html
@@ -4,26 +4,33 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>
-            Accomodations
+            Accommodations
         </title>
-        <h1>Accomodations</h1>
-        <hr>
         </head>
-        <nav>
-            <div class="topnav"></div>
-            <a href="index.html">Home Page </a>
-            <a href="Dining.html">Dining</a>
-            <a href="Booking.html">Book Now</a>
-            <a href="Spa.html">Spa</a>
-            <a href="activitiesandexcursions.html"> Activities and Excursions</a>
-        </div>
-        </nav>
+
+        
         <body>
-            <h2>Our Luxurious Guest Rooms </h2>
-            <p>Experience unparalleled comfort and breathtaking views in our range of elegantly appointed guest rooms and suites.</p>
-            <ul> 
-                <h3> Ocean View Deluxe Room</h3>
-                Indulge in stunning panoramic views of the ocean from your private balcony. These rooms offer a perfect blend of comfort and style.
+            <header>
+            <h1>Accomodations</h1>
+                    <hr>
+            </header>
+                    <nav class="topnav">
+                        <a href="index.html">Home Page</a>
+                        <a href="Dining.html">Dining</a>
+                        <a href="Spa.html">Spa</a>
+                        <a href="ActivitiesAndExcursions.html">Activities and Excursions</a>
+                      </nav>
+
+                <main>
+                    <section>
+                          <h2>Our Luxurious Guest Rooms </h2>
+                          <p>Experience unparalleled comfort and breathtaking views in our range of elegantly appointed guest rooms and suites.</p>
+                    </section>
+
+                    <section>
+                         <h3> Ocean View Deluxe Room</h3>
+                         <p>Indulge in stunning panoramic views of the ocean from your private balcony. These rooms offer a perfect blend of comfort and style.</p>
+                        <ul>
                 <li> King-sized bed</li>
                 <li>Private balcony with ocean view</li>
                 <li>En-suite bathroom with rain shower</li>
@@ -31,9 +38,13 @@
                 <li>Complimentary Wi-Fi</li>
                 <li>Flat-screen TV</li>
                 <li>Mini-bar</li>
+                        </ul>
+                    </section>
 
+                    <section>
                 <h3>Beachfront Suite </h3>
-                Step directly onto the sand from your spacious suite. Enjoy the ultimate beachfront experience with added luxury and privacy.
+                <p> Step directly onto the sand from your spacious suite. Enjoy the ultimate beachfront experience with added luxury and privacy.</p>
+                <ul>
                 <li> King-sized bed</li>
                 <li>Separate living area</li>
                 <li>En-suite bathroom with soaking tub and separate shower</li>
@@ -41,9 +52,13 @@
                 <li>Complimentary Wi-Fi</li>
                 <li>Multiple Flat-screen TVs</li>
                 <li>Mini-bar</li>
+                </ul>
+                    </section>
 
+                    <section>
                 <h3>Garden View Family Room</h3>
-                Perfect for families, these rooms offer ample space and a tranquil view of our lush gardens.
+                <p> Perfect for families, these rooms offer ample space and a tranquil view of our lush gardens.</p>
+                <ul>
                 <li>Two double beds</li>
                 <li>Private balcony with garden view</li>
                 <li>En-suite bathroom</li>
@@ -51,9 +66,13 @@
                 <li>Complimentary Wi-Fi</li>
                 <li>Flat-screen TV</li>
                 <li>Mini-bar</li>
+                </ul>
+                    </section>
 
+                    <section>
                 <h3>Premium Oceanfront Suite with Plunge Pool</h3>
-                Experience the epitome of luxury. This exclusive suite features a private plunge pool and unparalleled ocean views.
+                <p> Experience the epitome of luxury. This exclusive suite features a private plunge pool and unparalleled ocean views.</p>
+               <ul>
                 <li>King-sized bed</li>
                 <li>Separate living and dining areas</li>
                 <li>Expansive private terrace with plunge pool and sun loungers</li>
@@ -62,9 +81,13 @@
                 <li>Complimentary premium Wi-Fi</li>
                 <li>Multiple smart TVs</li>
                 <li>Fully stocked mini-bar</li>
+               </ul>
+                    </section>
 
+                    <section>
                 <h3>Accessible Room</h3>
-                Designed for guests with mobility needs, these rooms offer comfort and accessibility features.
+                <p>Designed for guests with mobility needs, these rooms offer comfort and accessibility features.</p>
+                <ul>
                 <li>King-sized bed</li>
                 <li>Spacious layout for wheelchair accessibility</li>
                 <li>Accessible bathroom with grab bars and roll-in shower</li>
@@ -72,6 +95,8 @@
                 <li>Visual and auditory alert systems</li>
                 <li>Complimentary Wi-Fi</li>
                 <li>Flat-screen TV</li>
-            </ul>
+                </ul>
+                    </section>
+                </main>
         </body>
 </html>
