Fix accommodation link

--- a/activitiesandexcursions.html
+++ b/activitiesandexcursions.html
@@ -16,7 +16,7 @@
 
             <nav class="topnav">
                 <a href="index.html">Home Page</a>
-                <a href="Accommodations.html">Accommodations</a>
+                <a href="Accommdations.html">Accommodations</a>
                 <a href="Dining.html">Dining</a>
 
               </nav>
