--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <nav class="topnav">
                 <a class="active" href="index.html">Home</a>
-                <a href="Accommodations.html">Accommodations</a>
+                <a href="Accomodations.html">Accommodations</a>
                 <a href="Dining.html">Dining</a>
 
                 <a href="Spa.html">Spa</a>
