--- a/Spa.html
+++ b/Spa.html
@@ -18,7 +18,7 @@
 
             <nav class="topnav">
                 <a href="index.html">Home Page</a>
-                <a href="Accommodations.html">Accommodations</a>
+                <a href="Accomodations.html">Accommodations</a>
                 <a href="Dining.html">Dining</a>
                 <a href="ActivitiesAndExcursions.html">Activities and Excursions</a>
               </nav>
