--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
         <header>
                 <h1>Shangri-La Beach Resort</h1>
                 <h2>Your Dream Getaway</h2>
+                <div id="weather">Loading Cancun, Mexico Weather...</div>
                 <hr>
             </header>
 
+            <script src="script.js"></script>
+        
             <nav class="topnav">
                 <a class="active" href="index.html">Home</a>
                 <a href="Accomodations.html">Accommodations</a>
